@@ -52,8 +52,7 @@
      for each dependency.
 
      For debian systems, pygame is actively maintained in the debian
-     archives. It is available for the "woody" release. Visit the debian
-     pygame page for more information.
+     archives. Visit the debian pygame page for more information.
      http://packages.debian.org/cgi-bin/search_packages.pl?keywords=pyga
      me
 
@@ -125,25 +124,12 @@
    Unix Compiling Info
 
      Compiling from linux shouldn't give you any problems. One thing you
-     must keep in mind is that most linux packages separate the actual
-     library from the "dev" files needed to compile. To build on linux
-     you'll need to make sure the packages like "SDL-dev" are installed.
+     must keep in mind is that most linux RPM packages separate the
+     actual library from the "dev" files needed to compile. To build you
+     will need to make sure the packages like "SDL-dev" are installed.
 
      You can check to see if SDL is ready to be built from by running
      the command "sdl-config" and seeing if it is found.
-
-     Depending on where the SMPEG headers are installed, the pygame
-     "config.py" script might not actually find it. If this happens you
-     can easily fix the SMPEG line in the "Setup" script to use the
-     correct flags. Then also uncomment the line for the "movie" module.
-
-     Several users have run into error compiling when trying to use the
-     Numeric Python header files. This is a problem with the
-     autoconfigure script. The script foolishly assumes if it can import
-     the Numeric module, then the headers will be available for compile.
-     You need to either install the correct "python-numeric-dev" package
-     for your system, or comment out the line for "surfarray" in the
-     "Setup" file.
 
    OSX Compiling Info
 
