@@ -4,6 +4,9 @@
 # BREAK = change breaks existing code
 # BUG	= fixed a bug that was (or could have been) crashing
 
+July 17, 2002
+	Michael Hudson's unicode cleanups
+
 June 15, 2002
 	added get_time() and get_rawtime() to Clock
 
